# thingy-controller

./: Cargo.toml  README.md
.cargo/: config.toml
flutter_bridge/: README.md  pubspec.yaml
flutter_bridge/android/app/: build.gradle
flutter_bridge/android/app/src/main/: AndroidManifest.xml
flutter_bridge/android/app/src/main/kotlin/com/example/flutter_bridge/: MainActivity.kt
flutter_bridge/ios/Runner/: Info.plist
flutter_bridge/ios/Runner.xcodeproj/: project.pbxproj
flutter_bridge/lib/: home_page.dart  main.dart
flutter_bridge/linux/: CMakeLists.txt  my_application.cc
flutter_bridge/macos/Runner.xcodeproj/: project.pbxproj
flutter_bridge/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_bridge/macos/Runner/Configs/: AppInfo.xcconfig
flutter_bridge/test/: widget_test.dart
flutter_bridge/web/: index.html
flutter_bridge/windows/: CMakeLists.txt
flutter_bridge/windows/runner/: Runner.rc  main.cpp
flutter_gateway/: README.md  pubspec.yaml
flutter_gateway/android/app/: build.gradle
flutter_gateway/android/app/src/main/kotlin/com/example/flutter_bridge/: MainActivity.kt
flutter_gateway/ios/Runner.xcodeproj/: project.pbxproj
flutter_gateway/lib/: home_page.dart
flutter_gateway/test/: widget_test.dart
host-adapter/: Cargo.toml  README.md
host-adapter/src/: main.rs
mensage_broker/: receive.py  receive_button.py
message_broker/: README.md  receive.py  run.sh  send.py
src/: ble.rs  main.rs  sensor.rs
thingy-control/: Cargo.toml  README.md  load_softdevice.sh  memory.x
thingy-control/src/: ble.rs  main.rs
