[package]
name = "thingy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
nrf52832-hal = { version = "0.16.0", features = ["rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
