[package]
edition = "2021"
name = "thingy-controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly"] }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "nightly"] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "nightly"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nightly"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.6.0", optional = true, features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"

fixed = "1.10.0"
static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
embedded-storage = "0.3.0"
embedded-hal = { version = "1.0.0-rc.1" }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
sx1509 = "0.2.0"
mpu9250 = { version = "0.25.0", features = ["i2c"] }

[profile.release]
debug = 2
