[package]
name = "host-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
evdev = { git = "https://github.com/emberian/evdev", features = ["tokio"] }
lapin = "2.3.1"
libm = "0.2.8"
log = "0.4.20"
once_cell = "1.18.0"
plotters = "0.3.5"
tokio = { version = "1.33.0", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
